# MMRL

./: .babelrc.js  .gitignore  .gitmodules  .prettierrc  CHANGELOG.md  DEV.md  LICENSE  Makefile  README.md  app.json  build.gradle  buildTools.py  deploy.js  gradle.properties  index.js  licensefix.js  package-lock.json  package.json  publish-github.js  settings.gradle  settings.gradle.kts  tsconfig.json  update.py  webpack.config.js  webpack.config.ts  webpack.dev.ts  webpack.prod.ts
.github/: FUNDING.yml  dependabot.yml
Android/: .gitignore  build.gradle  gradle.properties
Android/app/src/main/cpp/: Android.mk  CMakeLists.txt  clog.cpp  native.cpp  properties.cpp  shell.cpp
Android/app/src/main/cpp/includes/: colorlog.h
Website/: .babelrc.js  .gitignore  .prettierrc  CHANGELOG.md  Makefile  assetfix.js  bun.lockb  license.js  license.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.config.ts  webpack.dev.ts  webpack.prod.ts
__tests__/: App-test.tsx
android/: settings.gradle
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/jni/: CMakeLists.txt  file-manager.cpp  logging.h
assets/: MMRL-CLI-Cover.sketch  MMRL-Cover.sketch  assets.sketch  favicons.sketch  gradient-1080px.sketch  gradient-512px.sketch  icon-normal-512px.sketch  icon-xmas-512px.sketch  normal-icon.sketch  phoneScreenshots.sketch  store_images.sketch
compat/: build.gradle.kts
docs/: ANTI-FEATURES.md  INSTALLER.md  ModConf.md  ModFS.md  ModFS_az.md  ModuleConfigure.md  README.md  README_AZ.md  README_PT.md  README_az.md  REPO-JSON.md  (+4 more)
(+1282 files in other folders)
